# Script-kiddie

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new-rule.yml
.github/workflows/: ci.yml  code-scanning-sarif.yml
apps/api/: .env  .env.example  Dockerfile  pyproject.toml
apps/api/src/app/: auth.py  config.py  main.py  worker.py
apps/api/src/app/db/: models.py  session.py
apps/api/src/app/routes/: health.py  jobs.py  snippets.py  stats.py  webhooks.py
apps/api/src/app/services/: audit.py  pipeline.py  policy.py  webhooks.py
apps/api/tests/: conftest.py  test_health.py  test_jobs.py  test_policy.py
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/jobs/: page.tsx
apps/web/app/jobs/[id]/: page.tsx
apps/web/app/snippets/: page.tsx
apps/web/lib/: api.ts
infra/: docker-compose.yml
policies/: default.yml
rulesets/: agent-guardrails.yml  agentic-tool-abuse.yml  data-exfiltration.yml  mcp-hardening.yml  model-supply-chain.yml  multi-tenant-isolation.yml  nhi-lifecycle.yml  owasp-llm-top10-source-only.yml  owasp-llm-top10.yml  rag-poisoning.yml
snippets/python/structured-output/: meta.json  snippet.md
snippets/python/tool-allowlist/: meta.json  snippet.md
tools/: scan_to_sarif.py
